# ddd-python

./: .editorconfig  .pre-commit-config.yaml  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
src/: __init__.py  __main__.py  hello.py
src/api/: __init__.py  app.py
src/api/routes/: __init__.py  accounts.py
src/config/: environment.py
src/core/accounts/entities/: dto.py  enums.py
src/core/accounts/services/: accounts.py
src/infra/db/: connection.py
src/infra/db/migrations/: env.py
src/infra/db/migrations/versions/: 1852e4859683_added_accounts_table.py  8167dfa51bce_added_users_table.py  99669abce3e8_added_account_holder_table.py  bbc10f992358_added_users_table.py
src/infra/db/models/: __init__.py  accounts.py  base.py  users.py
src/infra/db/repositories/: accounts.py  base.py  users.py
src/tests/infra/db/: test_accounts_posgres_repository.py  test_users_postgres_repository.py
